@@ -219,6 +219,10 @@ class ApiQueryAllUsers extends ApiQueryBase {
 			'group' => 'Limit users to a given group name',
 			'prop' => array(
 				'What pieces of information to include.',
+				' blockinfo     - Adds the information about a current block on the user',
+				' groups        - Lists groups that the user is in',
+				' editcount     - Adds the edit count of the user',
+				' registration  - Adds the timestamp of when the user registered',
 				'`groups` property uses more server resources and may return fewer results than the limit' ),
 			'limit' => 'How many total user names to return',
 			'witheditsonly' => 'Only list users who have made edits',
