@@ -161,7 +161,13 @@ class ApiQueryTags extends ApiQueryBase {
 		return array(
 			'continue' => 'When more results are available, use this to continue',
 			'limit' => 'The maximum number of tags to list',
-			'prop' => 'Which properties to get',
+			'prop' => array(
+				'Which properties to get',
+				' name         - Adds name of tag',
+				' displayname  - Adds system messsage for the tag',
+				' description  - Adds description of the tag',
+				' hitcount     - Adds the amount of revisions that have this tag',
+			),
 		);
 	}
 
